
Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5

 * changed mlib: renamed the functions last0, last1, lastn to m%last0, m%last1, m%lastn

 * added #1= style labelled forms to the reader
 * added tailrecursion->loop transformation:
   transform the innermost tail recursion/ named let/ let* /letrec into a loop

 * mlib: added values as a place for setf
 * mlib: added psetf

 * fixed multiple-value-bind when the values form was a variable
 * fixed compiled (list* 1 2 3 (values 4 5)) and (list 1 2 3 (values 4 5))
   was: would display multiple values in the REPL
 * fixed mlib: "last" with any decimal number argument would return the whole list


Changes in JMurmel-1.4.5 relative to JMurmel-1.4.4
released: 2023-12-31

 * changed (fixed?) the commandline parameter --eval: environment is no longer reset before REPL
   so that e.g.
     jmurmel --repl --eval (load \"mlib\")
   will work as expected
 * added the primitives lisp-implementation-type and lisp-implementation-version
 * (declaim (optimize (debug 0))) omits "loc =..." in compiled code
 * changed the reader to treat non-ascii whitespace as whitespace, too

 * mlib: added dotted-nthcdr, ldiff, tailp, butlast, nbutlast, adjoin, pushnew

 * fixed interpreted "(let () (values 1 2 3) 10)"
 * fixed control flow & multiple values, e.g. "(if (values 1 2 3) 'yes) ; ==> yes"
 * fixed symbol names that contain a ';' such as |;abc|
 * fixed mlib: in "dotimes" the loopvariable now is bound in the resultform
   even if the countform was an int literal <= 0


Changes in JMurmel-1.4.4 relative to JMurmel-1.4.3
released: 2023-12-10

 * changed *command-line-argument-list* in compiled Murmel to a regular mutable list
 * changed load and require in compiled Murmel: must appear at toplevel
 * changed/fixed car to accept all strings
 * changed read-textfile and read-textfile-lines to use UTF-8 as the default charset
   (unless the charset was given as an argument)
 * changed read-textfile to no longer append a #\Newline at the end